fixed cta-section overflow issue

--- a/src/app/cta-section/cta-section.component.css
+++ b/src/app/cta-section/cta-section.component.css
@@ -124,6 +124,11 @@ p {
 }
 @media (max-width: 650px) {
   /* Start of one column view */
+
+  :host {
+    margin-left: -36px;
+  }
+
   section {
     flex-direction: column;
     padding-top: 38px;
